# ansible-agent-connector

./: README.md  guide.md  openapi.yaml  pyproject.toml
src/copilot_ansible_agent/: __main__.py  api.py  config.py
src/copilot_ansible_agent/executor/: playbook_runner.py
src/copilot_ansible_agent/inventory/: models.py  service.py
src/copilot_ansible_agent/storage/: files.py
tests/: test_file_storage.py  test_inventory_service.py
